# Courses

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  groups.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
education/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
education/management/commands/: create_courses_and_lessons.py
education/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_alter_lesson_video_link.py  0004_alter_lesson_video_link.py
users/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: create_payment.py  create_test_user.py  createadmin.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_options_subscription.py  0004_payment_link_payment_session_id_alter_payment_user.py
